--- a/css/home/home.css
+++ b/css/home/home.css
@@ -5,6 +5,8 @@ body {
 
 	height: 200rem;
 	overflow-x: hidden;
+
+	scroll-behavior: smooth;
 }
 
 .topBar {
@@ -263,16 +265,285 @@ hr.sectionDivider {
 }
 
 
-.aboutSPText-wrapper .highlightedText {
-	/* background-color: #173753c7; */
-	background-color: #6daddb56;
-	/* color: var(--brightWhite); */
+/* =============== Services Section ================== */
 
-	color: var(--charcoal);
-	text-decoration: underline;
-	text-decoration-color: var(--prussianBlue);
-	text-decoration-thickness: 0.2rem;
+
+.services_Section{
+	justify-content: center;
+	align-items: center;
+
+	background-color: var(--carolinaBlue);
+	color: var(--brightWhite);
+
+
+	position: relative;
 }
+
+
+
+.services_Section h2{
+	z-index: 1;
+	text-align: center;
+	font-size: 2.5rem;
+	text-shadow: 0.2rem 0.2rem 0rem var(--biceBlue);
+}
+
+.servicePackages-wrapper{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	/* text-align: center; */
+	z-index: 1;
+}
+
+
+.eachService-wrapper {
+	/* background-color: var(--celestialBlue); */
+	background: rgb(40,146,215);
+	background: linear-gradient(90deg, rgba(40,146,215,1) 32%, rgba(29,112,162,0.9304096638655462) 93%);
+	
+	border-radius: 1rem;
+	padding: 1rem;
+	margin-block: 1rem;
+	
+	box-shadow: 0rem .2rem .5rem 0rem var(--charcoal);
+	transition: .2s ease;
+}
+.eachService-wrapper:hover{
+	transition: .2s ease;
+	transform: scale(1.05);
+}
+
+
+.serviceHeader {
+	padding: .5rem;
+}
+
+.serviceNameHeading {
+	text-shadow: 0.2rem 0.2rem 0rem rgba(0, 0, 0, 0.521);
+	font-size: 1.5rem;
+}
+
+.serviceDetailsText-wrapper {
+	padding: .5rem;
+	
+}
+
+.serviceDetailsText {
+}
+
+.serviceAdditionalInfo-wrapper {
+	padding: .5rem;
+	margin-block: 1rem;
+}
+
+.servicePriceText {
+	background-color: #ffffff46;
+	font-weight: 600;
+	padding: .2rem;
+	font-size: 1.2rem;
+}
+
+.serviceLinks-wrapper {
+	width: 100%;
+	display: flex;
+	justify-content: end;
+}
+
+a.knowMoreAboutServiceLink {
+	align-self: flex-end;
+	text-align: right;
+	background-color: #1737538c;
+	border-radius: .2rem;
+	color: var(--brightWhite);
+	padding: .2rem;
+	opacity: 1;
+	
+	
+	
+    background-color: var(--white);
+    color: var(--prussianBlue);
+    box-shadow: .25rem .25rem 0rem .01rem var(--prussianBlue);
+    
+    border: .2rem solid var(--prussianBlue);
+    border-radius: .5rem;
+    padding: .4rem;
+	transition: .1s ease;
+}
+
+a.knowMoreAboutServiceLink:hover, 
+a.knowMoreAboutServiceLink:active  {
+
+    background-color: var(--prussianBlue);
+    box-shadow: .25rem .25rem 0rem .01rem var(--biceBlue);
+
+    color: var(--white);
+    transform: scale(.9);
+    transition: .1s ease;
+}
+
+
+
+
+
+
+
+
+
+/* Custom SVG shape css for background */
+
+.custom-shape-divider-top-1712565683 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+
+}
+
+.custom-shape-divider-top-1712565683 svg {
+	position: relative;
+    display: block;
+    width: calc(104% + 1.3px);
+    height: 197px;
+}
+
+.custom-shape-divider-top-1712565683 .shape-fill {
+    fill: #173753d3;
+}
+
+
+.custom-shape-divider-bottom-1712565851 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1712565851 svg {
+    position: relative;
+    display: block;
+    width: calc(104% + 1.3px);
+    height: 84px;
+}
+
+.custom-shape-divider-bottom-1712565851 .shape-fill {
+    fill: #173753;
+}
+
+
+
+
+
+
+/* =============== Reviews Section ================  */
+
+
+.reviewSection {
+	justify-content: center;
+	align-items: center;
+}
+
+.reviewSection h2 {}
+
+.reviewsWhole-wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	width: 90%;
+}
+
+.review-wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+
+	background-color: #0d63a04b;
+
+	padding: 1rem;
+
+	border-radius: 92% 8% 83% 17% / 19% 88% 12% 81% 
+}
+
+.reviewerPicture-wrapper {
+	width: 50%;
+	border-radius: 100%;
+	/* align-self: flex-start; */
+}
+
+.reviewerPicture-wrapper img {
+	width: 100%;
+	border-radius: 100%;
+	box-shadow: 0rem .2rem .5rem 0rem rgba(0, 0, 0, 0.5);
+}
+
+.reviewText-wrapper {
+	padding: .5rem;
+}
+
+.reviewText-wrapper .reviewText {
+	font-size: 1.2rem;
+	color: var(--brightWhite);
+	text-shadow: 0rem .1rem .2rem rgba(0, 0, 0, 0.9);
+	/* background-color: #173753a8; */
+	/* font-style: italic; */
+	line-height: 1.5rem;
+}
+
+.reviewerInfo-wrapper {
+	padding: .5rem;
+	width: 80%;
+	display: flex;
+	
+	/* background-color: #2891d77e; */
+	border-radius: 1rem;
+	color: var(--brightWhite);
+}
+
+.reviewerInfo-wrapper .reviewerInfo {
+	text-align: right;
+	/* text-shadow: 0rem 0rem .2rem black; */
+	color: var(--charcoal);
+	font-weight: 600;
+}
+
+.reviewControls-wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.reviewControls-wrapper button{
+	margin-inline: .5rem;
+}
+.reviewControls-wrapper button span{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.reviewControls-wrapper .previousReviewButton {
+}
+
+.reviewControls-wrapper .nextReviewButton {}
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* ========== FAQs Section =========== */
 
@@ -341,6 +612,11 @@ hr.sectionDivider {
 	font-weight: 400;
 	padding: 0.5rem;
 }
+
+
+
+
+
 
 /* ============== Contact Section ================ */
 
