--- a/css/root.css
+++ b/css/root.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 *{
     padding: 0;
     margin: 0;
@@ -72,6 +69,7 @@ button.regularButton{
     align-items: center;
 
     width: fit-content;
+    transition: .1s ease;
 }
 
 button.regularButton:active, button.regularButton:hover{
@@ -101,7 +99,20 @@ a:hover{
 
 
 
+
 /* Other Elements Default Styles */
+
+
+.highlightedText {
+	/* background-color: #173753c7; */
+	background-color: #6daddb56;
+	/* color: var(--brightWhite); */
+
+	color: var(--charcoal);
+	/* text-decoration: underline;
+	text-decoration-color: var(--prussianBlue);
+	text-decoration-thickness: 0.2rem; */
+}
 
 
 ::-moz-selection {
