--- a/css/home/home.css
+++ b/css/home/home.css
@@ -45,17 +45,19 @@ nav {
 	/* box-shadow: 0rem 0.1rem 0.2rem 0.2rem; */
 
 	width: 100%;
-	height: 100%;
+	height: 80%;
 	position: fixed;
 	top: 0rem;
 	left: 0rem;
 
+	padding-block: 1rem;
+	
 	display: none;
-
+	
 	background-color: var(--prussianBlue);
-
+	
 	border: 0.6rem white solid;
-
+	
 	overflow-y: scroll;
 }
 
@@ -86,7 +88,7 @@ nav {
 	padding: 1rem;
 	margin-block: 1rem;
 
-	font-size: 2rem;
+	font-size: 1.5rem;
 
 	width: 100%;
 	flex: 1;
