--- a/css/root.css
+++ b/css/root.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap'); */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 
 *{
     padding: 0;
@@ -25,6 +29,7 @@ html {
   
   --font-family: "Poppins", sans-serif;
 	--font-family: 'Montserrat', sans-serif;
+	--handwriting-font-family: "Dancing Script", cursive;
 
   font-family: var(--font-family);
 	font-optical-sizing: auto;
