--- a/css/home/home.css
+++ b/css/home/home.css
@@ -122,7 +122,7 @@ header {
 	/* min-height: 100vh; */
 
 	/* background-image: url('../../assets/hero_page_image-min.jpg'); */
-	background-image: url('../../assets/studying_thinking_illustration.png');
+	background-image: url('../../assets/studying_thinking_illustration.webp');
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: bottom;
