--- a/css/home/home.css
+++ b/css/home/home.css
@@ -121,7 +121,7 @@ header {
 
 	/* min-height: 100vh; */
 
-	/* background-image: url('../../assets/hero_page_image-min.jpg'); */
+	/* background-image: url('../../assets/hero_page_image-min.webp'); */
 	background-image: url('../../assets/studying_thinking_illustration.webp');
 	background-size: contain;
 	background-repeat: no-repeat;
