Improve services page & code separation
I have divided css and js files for other pages to include common code.

--- a/css/services/services.css
+++ b/css/services/services.css
@@ -1,12 +1,121 @@
-body{
-    padding: 1rem;
+body {
+	/* padding: 1rem; */
+
+	position: relative;
+
+	overflow-x: hidden;
+	background-color: var(--white);
 }
 
+section {
+	display: flex;
+	flex-direction: column;
 
-h2{
-    margin-top: 2rem;
+	justify-content: center;
+	align-items: center;
+	text-align: left;
+
+	width: 100%;
+
+	padding: 2rem;
 }
 
-h3{
-    margin-top: 1rem;
+.services-wrapper {
+	display: flex;
+	flex-direction: column;
+
+	width: 80%;
+	background-color: #ffffff;
+	box-shadow: 0rem 0.5rem 1rem 0rem rgba(0, 0, 0, 0.055);
+	border-radius: 1rem;
+	padding: 2rem;
+
+	margin-block: 2rem;
+}
+
+hr.dotted {
+	margin-block: 2rem;
+}
+
+h1 {
+	font-family: var(--handwriting-font-family);
+	font-size: 5rem;
+	text-align: center;
+    margin-block: 1rem;
+}
+h1 span {
+	text-decoration: underline;
+	text-underline-offset: 0.5rem;
+	text-decoration-thickness: 0.3rem;
+	/* color: var(--brightWhite); */
+	/* text-shadow: .2rem .2rem rem var(--prussianBlue); */
+}
+
+h2 {
+	margin-top: 2rem;
+	/* font-size: 2rem; */
+	color: var(--biceBlue);
+}
+
+h3 {
+	/* margin-top: 2rem; */
+}
+
+.circle {
+	--size: 40rem;
+	width: var(--size);
+	height: var(--size);
+
+	border-radius: 100%;
+
+	background-color: var(--carolinaBlue);
+	position: absolute;
+
+	z-index: -2;
+
+	opacity: 0.7;
+	overflow-x: hidden;
+}
+
+.midRight {
+	top: 50%;
+	right: -30rem;
+}
+
+.topLeftCorner {
+	top: -10%;
+	left: -20rem;
+}
+
+.knowMorePara {
+	background-color: var(--carolinaBlue);
+	padding: 1rem;
+	border-radius: 0.2rem;
+	width: 80%;
+	box-shadow: 0.1rem 0.1rem 0.8rem 0rem rgba(0, 0, 0, 0.3);
+    text-align: center;
+}
+.knowMorePara a {
+	color: var(--brightWhite);
+	text-decoration: underline;
+	text-decoration-thickness: 0.2rem;
+	text-decoration-color: var(--brightWhite);
+}
+
+/* Tablet iPads portrait mode max-width */
+@media only screen and (max-width: 1024px) {
+	:root {
+		font-size: 12px;
+	}
+
+    h1{
+        font-size: 3rem;
+    }
+	.midRight {
+		display: none;
+	}
+
+	.services-wrapper {
+		width: 100%;
+	}
 }
