--- a/css/commonElements.css
+++ b/css/commonElements.css
@@ -25,19 +25,19 @@ nav {
 	justify-content: center;
 	align-items: center;
 
-	width: 100%;
-	height: 80%;
+	width: 70%;
+	/* height: 80%; */
 	position: fixed;
 	top: 0rem;
-	left: 0rem;
+	right: 0rem;
 
-	padding-block: 1rem;
+	padding-block: .5rem;
 	
 	display: none;
 	
 	background-color: var(--prussianBlue);
 	
-	border: 0.6rem white solid;
+	border: 0.3rem white solid;
 	
 	overflow-y: scroll;
 }
@@ -66,9 +66,9 @@ nav {
 .navPagesLinks a {
 	text-align: center;
 	padding: 1rem;
-	margin-block: 1rem;
+	margin-block: .5rem;
 
-	font-size: 1.5rem;
+	/* font-size: 1.5rem; */
 
 	width: 100%;
 	flex: 1;
